<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/header_add_product"
        android:textSize="25sp"
        android:layout_margin="10sp"
        android:gravity="center"/>

    <EditText
        android:id="@+id/editTextProductName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:hint="@string/product_name"/>

    <EditText
        android:id="@+id/editTextProductCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:hint="@string/product_category"/>

    <EditText
        android:id="@+id/editTextProductPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:inputType="numberDecimal"
        android:hint="@string/product_price"/>

    <Button
        android:id="@+id/btnSaveProduct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_product_button"
        android:layout_margin="30sp"/>

</LinearLayout>
